Make cards clickable

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="playingarea">
         <div class="pa_left"></div>
         <div class="pa_center">
-            <div class="card">
+            <div class="card noselect">
                 <div class="ca_top"><span class="suit">A</span></div>
                 <div class="ca_center"><span class="value">A</span></div>
                 <div class="ca_bottom"><span class="suit">A</span></div>
